# eyewear_node/routes/v1/order/index.js
@@ -1,14 +1,34 @@
-const { Router } = require('express')
-const {deliveryChargeValidation, checkOrderValidation, applyCouponValidation, placeOrderValidation, ordersValidation} = require('../../../validator/order')
-const { getDeliveryCharge,getCheckoutInfo, checkOrder, applyCoupon, placeOrder, orders} = require('../../../controllers/order/order.controller')
-const router = Router()
+const { Router } = require("express");
+const { authenticate } = require("../../../middlewares/auth");
+const {
+  deliveryChargeValidation,
+  checkOrderValidation,
+  applyCouponValidation,
+  placeOrderValidation,
+  ordersValidation,
+} = require("../../../validator/order");
+const {
+  getDeliveryCharge,
+  getCheckoutInfo,
+  checkOrder,
+  applyCoupon,
+  placeOrder,
+  razorPayCallback,
+  orders,
+} = require("../../../controllers/order/order.controller");
+const router = Router();
 
-router.post('/deliverycharge',deliveryChargeValidation,getDeliveryCharge)
-router.get('/getcheckoutinfo',getCheckoutInfo)
-router.post('/checkorder', checkOrderValidation, checkOrder)
-router.post('/applycoupon', applyCouponValidation, applyCoupon)
-router.post('/placeorder', placeOrderValidation, placeOrder)
-router.get('/orders', ordersValidation, orders)
-
+router.post(
+  "/deliverycharge",
+  authenticate,
+  deliveryChargeValidation,
+  getDeliveryCharge
+);
+router.get("/getcheckoutinfo", authenticate, getCheckoutInfo);
+router.post("/checkorder", authenticate, checkOrderValidation, checkOrder);
+router.post("/applycoupon", authenticate, applyCouponValidation, applyCoupon);
+router.post("/placeorder", authenticate, placeOrderValidation, placeOrder);
+router.get("/razorpaycallback", razorPayCallback);
+router.get("/orders", authenticate, ordersValidation, orders);
 
 module.exports = router;
